# HFDP

./: .gitignore  CMakeLists.txt
01_Strategy/: CMakeLists.txt
01_Strategy/src/: duck.h  duck_mallard.h  duck_model.h  fly_behavior.h  fly_no_way.h  fly_rocket_powered.h  fly_with_wings.h  main.cpp  quack_behavior.h  quack_mute.h  quack_normally.h  quack_squeak.h
02_Observer/: CMakeLists.txt
02_Observer/src/: current_conditions_display.h  display_element.h  forecast_display.h  heat_index_display.h  main.cpp  observer.h  statistics_display.h  subject.h  weather_data.h
03_Decorator/: CMakeLists.txt
03_Decorator/src/: beverage.h  condiments_decorator.h  dark_roast.h  decaf.h  espresso.h  house_blend.h  main.cpp  mocha.h  soy.h  steamed_milk.h  whip.h
04_Factory/: CMakeLists.txt
04_Factory/Abstract_Factory/: CMakeLists.txt
04_Factory/Abstract_Factory/src/: black_olives.h  cheese.h  cheese_pizza.h  chicago_pizza_ingredient_factory.h  clam_pizza.h  clams.h  dough.h  eggplant.h  fresh_clams.h  frozen_clams.h  garlic.h  marinara_sauce.h  mozzarella_cheese.h  mushroom.h  ny_pizza_ingredient_factory.h  ny_pizza_store.h  onion.h  parmesan_cheese.h  pepperoni.h  pepperoni_pizza.h  pizza.h  pizza_ingredient_factory.h  (+11 more)
04_Factory/Factory_Method/: CMakeLists.txt
04_Factory/src/: chicago_pizza_store.h  chicago_style_clam_pizza.h  chicago_style_pepperoni_pizza.h  chicago_style_veggie_pizza.h  ny_pizza_store.h  pizza_store.h
05_Singleton/: CMakeLists.txt
05_Singleton/library_test/: CMakeLists.txt
05_Singleton/library_test/src/: main.cpp  singleton.cpp  singleton.h  uses_singleton_a.cpp  uses_singleton_a.h  uses_singleton_b.cpp  uses_singleton_b.h
(+7 files in other folders)
